--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,13 @@ version: '3.8'
 services:
   sasposts:
     build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8080:8080"
     environment:
       - DB_TYPE=postgres
-      - PG_URL=postgres://user:password@db:5432/sasposts?sslmode=disable
+      - PG_URL=postgres://user:password@postgres:5432/sasposts?sslmode=disable
 
       - REDIS_URL=redis:6379
     depends_on:
@@ -20,6 +22,8 @@ services:
       - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
       - POSTGRES_DB=sasposts
+    ports:
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
