Updated Redis: maked PubSub. |  Created unit test | Created Readme.md || Project is ready

--- a/.env
+++ b/.env
@@ -2,7 +2,10 @@ APP_PORT=8080
 
 DB_TYPE=postgres
 
+# pg_password password
+# pg_user user
+
 
 PG_URL=postgres://user:password@localhost:5432/sasposts?sslmode=disable
 
-# REDIS_URL=redis://localhost:6379
+REDIS_URL=redis://localhost:6379
